--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build:server": "tsx server/index.ts"
   },
   "dependencies": {
+    "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/extension-placeholder": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
+    "@tiptap/vue-3": "^3.18.0",
     "@vueuse/core": "^14.1.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
