--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tiptap/extension-placeholder": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
     "@tiptap/vue-3": "^3.18.0",
+    "@types/socket.io": "^3.0.1",
     "@vueuse/core": "^14.1.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -24,6 +25,8 @@
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.13",
     "pinia": "^3.0.4",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "uuid": "^13.0.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
